# jc-news

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-03-28-markdown-layout-design.md
src/jc_news/: __init__.py  __main__.py  printing.py
tests/: test_main.py  test_printing.py
