[project]
name = "jc-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Justin Chapman", email = "commonmodestudio@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "aiohttp==3.11",
  "beautifulsoup4==4.13",
  "anthropic>=0.52",
  "claude-agent-sdk==0.1",
  "click==8.3.1",
  "mistune==3.1.0",
  "pdfun",
]

[project.scripts]
jc-news = "jc_news:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff>=0.15.8",
  "ty>=0.0.26",
  "tryke @ git+https://github.com/thejchap/tryke",
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["FBT", "D203", "D213", "COM812", "ISC001"]
lint.per-file-ignores = { "tests/*" = ["D", "ANN201"] }

[tool.uv.sources]
pdfun = { git = "https://github.com/thejchap/pdfun.git" }
